prevent vector and sequence out of bounds access, fdo#60300

This fixes the symptom of the crash but not the underlying cause why a
subtotal count would be wrong.

(cherry picked from commit 8bd3be9915ff28458d010fc8f0a1a1ab66d730b0)

Conflicts:
	sc/source/core/data/dpoutput.cxx

Change-Id: I3782b5e39f18bc65ffe510b847ffa7969a26cd37